# sfo-reuseport

./: AGENTS.md  Cargo.toml  LICENSE  README.md  test-run.bat  test-run.sh
docs/architecture/: rust-crate.md
docs/modules/: sfo-reuseport.md
docs/reviews/_template/: acceptance-report.md
docs/versions/v0.1/reviews/: sfo-reuseport-v0.1-acceptance.md  sfo-reuseport-v0.1-dynamic-listeners-acceptance.md  sfo-reuseport-v0.1-ipv6-transparent-acceptance.md  sfo-reuseport-v0.1-linux-compatible-scheduling-acceptance.md  sfo-reuseport-v0.1-listener-registry-removal-acceptance.md  sfo-reuseport-v0.1-publish-metadata-acceptance.md  sfo-reuseport-v0.1-quic-reuseport-bpf-acceptance.md  sfo-reuseport-v0.1-quic-reuseport-ebpf-acceptance.md  sfo-reuseport-v0.1-quic-routed-udp-acceptance.md  sfo-reuseport-v0.1-remove-tcp-udp-add-listener-acceptance.md  sfo-reuseport-v0.1-serve-api-acceptance.md  sfo-reuseport-v0.1-server-handle-close-acceptance.md  (+6 more)
examples/: hyper_static.rs  tcp_echo.rs  udp_serve_socket.rs  udp_server.rs
harness/: pipeline-plan.md
harness/process_rules/task_templates/: acceptance-return-task.md  pipeline-stage-task.md  pipeline-submodule-task.md
harness/rules/: acceptance-review-rules.md  acceptance-task-rules.md  auto-pipeline-rules.md  design-doc-rules.md  implementation-admission-rules.md  proposal-doc-rules.md  schema-validation-rules.md  task-entry-gate-rules.md  testing-doc-rules.md  trigger-rules.md  unified-test-entry-rules.md
harness/scripts/: admission-check.py  schema-check.py  stage-scope-check.py  test-hyper-static-example.py  test-run.py  test-udp-serve-socket-example.py  test-udp-server-example.py
src/: lib.rs
src/core/: cid.rs  concurrency.rs  config.rs  error.rs  mod.rs  quic.rs  schedule.rs  server_runtime.rs  tcp.rs  udp.rs
src/platform/: bsd.rs  linux.rs  mod.rs  unix.rs  windows.rs
src/runtime/: async_std.rs  mod.rs  tokio.rs  tokio_uring.rs
tests/: dv.rs  integration.rs  unit.rs
tests/dv/: platform_cfg.rs  socket_init_callback.rs  socket_options.rs
tests/integration/: dynamic_listeners.rs  quic_routed_udp.rs  server_concurrency.rs  tcp_serve.rs  udp_serve.rs  worker_local_state.rs
tests/unit/: api_signatures.rs  error.rs  quic_routed_udp.rs  runtime_features.rs  schedule.rs  server_runtime.rs  socket_init_callback.rs  socket_options.rs  worker_model.rs  worker_runtime.rs
(+10 files in other folders)
