[package]
name = "sfo-reuseport"
version = "0.2.2"
edition = "2024"
rust-version = "1.85"
description = "Multi-worker TCP and UDP services with reuse-port style socket distribution"
license = "MIT"
readme = "README.md"
repository = "https://github.com/wugren/sfo-reuseport"
homepage = "https://github.com/wugren/sfo-reuseport"
documentation = "https://docs.rs/sfo-reuseport"
keywords = ["reuseport", "socket", "udp", "tcp", "runtime"]
categories = ["network-programming", "asynchronous"]
include = [
    "src/**",
    "examples/**",
    "README.md",
    "LICENSE",
    "Cargo.toml",
]

[features]
default = ["runtime-tokio"]
quinn = []
runtime-tokio = ["dep:tokio", "tokio/sync"]
runtime-async-std = ["dep:async-executor", "dep:async-std", "async-std/unstable"]
runtime-tokio-uring = ["dep:tokio", "dep:tokio-uring", "tokio/sync", "tokio/time"]

[dependencies]
async-executor = { version = "1.14", optional = true }
async-std = { version = "1.13", optional = true, features = ["attributes"] }
atomic-waker = "1.1"
getrandom = "0.3"
libc = "0.2"
num_cpus = "1.17"
socket2 = { version = "0.6", features = ["all"] }
tokio = { version = "1", optional = true, features = ["fs", "net", "rt", "rt-multi-thread", "macros", "time"] }

[dev-dependencies]
bytes = "1.11"
http-body-util = "0.1"
hyper = { version = "1.9", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
quinn = "0.11"
rcgen = "0.14"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-uring = { version = "0.5", optional = true }
